重构动态组件系统为Soa架构，重命名组件管理器并优化实体索引访问
- 将DynamicComponent重命名为SoaComponentGroupManager，对应接口IDynamicComponentGroupable改为ISoaComponentGroupable
- 重构EntityInfo中的ChunkEntityIndex为IndexInChunk，统一实体在块中索引的访问方式
- 移除DynamicComponentContext结构体，简化组件访问逻辑
- 注释掉ChunkQueryEnumerator中的NextArchetype实现，临时禁用该功能
- 重构DynamicComponentGroup为SoaComponentGroup，更新相关方法签名和实现
- 更新WorldCore中所有组件访问方法，使用新的Soa组件管理系统
- 优化SlimDictionary容量管理方法，统一命名规范

--- a/FLib/Sources/WorldCores/Worlds/WorldCore.CreateEntity.tt
+++ b/FLib/Sources/WorldCores/Worlds/WorldCore.CreateEntity.tt
@@ -15,7 +15,7 @@ namespace FLib.WorldCores
         var genericWheres = string.Join(" ", Enumerable.Range(1, i).Select(n => $"where T{n} : unmanaged"));
         var methodParams = string.Join(", ", Enumerable.Range(1, i).Select(n => $"in T{n} v{n} = default"));
         var builderAdds = string.Join("\n                ", Enumerable.Range(1, i).Select(n => $"builder.Add<T{n}>();"));
-        var setComponents = string.Join("\n            ", Enumerable.Range(1, i).Select(n => $"*chunk.Get<T{n}>(chunkEntityIndex) = v{n};"));
+        var setComponents = string.Join("\n            ", Enumerable.Range(1, i).Select(n => $"*chunk.Get<T{n}>(eti.IndexInChunk) = v{n};"));
         var setBits = string.Join("\n            ", Enumerable.Range(1, i)
             .Select(n => $"BitArrayOperator.SetBit(ComponentRegistry.ComponentTypeMaskBuffer, ComponentRegistry.GetId<T{n}>(), true);"));
 #>
@@ -33,11 +33,11 @@ namespace FLib.WorldCores
                 <#= builderAdds #>
                 archetype = ArchetypeGroup.Create(hash, builder);
             }
-            var et = archetype.CreateEntity(out var chunkEntityIndex);
-            var chunk = archetype.Chunks;
+            var et = archetype.CreateEntity(out var eti);
+            var chunk = eti.Chunk;
             <#= setComponents #>
             <#= string.Join("\n            ", Enumerable.Range(1, i)
-                    .Select(n => $"ComponentGenericMap<T{n}>.Info.ComponentAwake?.Invoke(ref *(byte*)chunk.Get<T{n}>(chunkEntityIndex), this, et);")) #>
+                    .Select(n => $"ComponentGenericMap<T{n}>.Info.ComponentAwake?.Invoke(ref *(byte*)chunk.Get<T{n}>(eti.IndexInChunk), this, et);")) #>
             return et;
         }
 <#
